# openapi.yaml
@@ -225,185 +225,6 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/Exam"
-  "/user/{id}/changePassword":
-    post:
-      x-skaffolder-id: 6026edf1a3e049112323fbe5
-      x-skaffolder-name: changePassword
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: 
-      x-skaffolder-crudType: 
-      x-skaffolder-description: Change password of user from admin
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: object
-      x-skaffolder-url: /{id}/changePassword
-      x-skaffolder-roles:
-        - 6026edf1a3e049112323fbe3
-      summary: Change password of user from admin
-      tags:
-        - User
-      responses:
-        "200":
-          description: OK
-  /user:
-    post:
-      x-skaffolder-id: 6026edf1a3e049112323fbe4
-      x-skaffolder-name: create
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: create
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION create
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /
-      x-skaffolder-roles: []
-      summary: CRUD ACTION create
-      tags:
-        - User
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                mail:
-                  type: string
-                name:
-                  type: string
-                password:
-                  type: string
-                roles:
-                  type: string
-                surname:
-                  type: string
-                username:
-                  type: string
-    get:
-      x-skaffolder-id: 6026edf1a3e049112323fbe6
-      x-skaffolder-name: list
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: list
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION list
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /
-      x-skaffolder-roles: []
-      summary: CRUD ACTION list
-      tags:
-        - User
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/User"
-  "/user/{id}":
-    delete:
-      x-skaffolder-id: 6026edf1a3e049112323fbeb
-      x-skaffolder-name: delete
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: delete
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION delete
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION delete
-      tags:
-        - User
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-    get:
-      x-skaffolder-id: 6026edf1a3e049112323fbe9
-      x-skaffolder-name: get
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: get
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION get
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION get
-      tags:
-        - User
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id resource
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-    post:
-      x-skaffolder-id: 6026edf1a3e049112323fbe7
-      x-skaffolder-name: update
-      x-skaffolder-id-resource: 6026edf0a3e049112323fbe1
-      x-skaffolder-resource: User
-      x-skaffolder-crudAction: update
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION update
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION update
-      tags:
-        - User
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/User"
   /course:
     post:
       x-skaffolder-id: 6026f0cba3e049112323fc58
@@ -799,47 +620,6 @@ components:
       required:
         - _id
         - title
-    User:
-      x-skaffolder-id: 6026edf0a3e049112323fbe1
-      x-skaffolder-id-db: 6026edf0a3e049112323fbd8
-      x-skaffolder-id-entity: 6026edf0a3e049112323fbd9
-      x-skaffolder-url: /user
-      x-skaffolder-type: User
-      properties:
-        _id:
-          type: string
-          x-skaffolder-required: true
-        mail:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbdc
-          x-skaffolder-type: String
-        name:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbdd
-          x-skaffolder-type: String
-        password:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbdb
-          x-skaffolder-type: String
-          x-skaffolder-required: true
-        roles:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbdf
-          x-skaffolder-type: String
-        surname:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbde
-          x-skaffolder-type: String
-        username:
-          type: string
-          x-skaffolder-id-attr: 6026edf0a3e049112323fbda
-          x-skaffolder-type: String
-          x-skaffolder-required: true
-      x-skaffolder-relations: 
-      required:
-        - _id
-        - password
-        - username
     course:
       x-skaffolder-id: 6026efcba3e049112323fc41
       x-skaffolder-id-db: 6026edf0a3e049112323fbd8
